[gd_scene load_steps=7 format=3 uid="uid://t14x0p6pjpni"]

[ext_resource type="Script" path="res://scripts/costumer.gd" id="1_bx6k8"]
[ext_resource type="Texture2D" uid="uid://ln0jsmkrefn7" path="res://icon.svg" id="1_vvwgl"]
[ext_resource type="Texture2D" uid="uid://bhiimb7j4yrb" path="res://tmp/Berlim C_Creme_L.png" id="2_rr6sa"]
[ext_resource type="Texture2D" uid="uid://bkxx54t7fq8qy" path="res://tmp/Berlim S_Creme_L.png" id="3_odtbe"]

[sub_resource type="SpriteFrames" id="SpriteFrames_oooxp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rr6sa")
}],
"loop": false,
"name": &"creme",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_odtbe")
}],
"loop": false,
"name": &"screme",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wo1xv"]
size = Vector2(64, 64)

[node name="Costumer" type="Area2D"]
z_index = 3
collision_layer = 0
collision_mask = 4
script = ExtResource("1_bx6k8")

[node name="RequestBubble" type="AnimatedSprite2D" parent="."]
position = Vector2(38, -63)
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_oooxp")
animation = &"new_animation"
autoplay = "new_animation"

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_vvwgl")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -83)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wo1xv")

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 3
offset_left = -50.0
offset_top = -51.0
offset_right = 54.0
offset_bottom = -38.0
show_percentage = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
